Command line arguments support