@@ -4,12 +4,21 @@ import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.LinkedList;
+import java.util.List;
 import java.util.stream.Collectors;
 
 import velka.clojure.ClojureCodeGenerator;
+import velka.core.expression.Expression;
+import velka.core.expression.Symbol;
+import velka.core.expression.Tuple;
 import velka.core.interpretation.Environment;
 import velka.core.interpretation.TopLevelEnvironment;
 import velka.core.langbase.OperatorBank;
+import velka.core.literal.LitString;
+import velka.util.ClojureCoreSymbols;
 
 /**
  * Main entry point for testing
@@ -41,44 +50,6 @@ public class Main {
 	private static void printHelp() {
 		System.out.println(USAGE);
 	}
-
-	private static void runMode(String mode, Path currentFolder) throws Exception {
-		runMode(mode, currentFolder, "");
-	}
-	
-	private static void runMode(String mode, Path currentFolder, String fileArg) throws Exception {
-		
-		Environment topLevel = TopLevelEnvironment.instantiate();
-		switch(mode) {
-		
-		case COMPILE:
-			Compiler.clojureCompile(Paths.get(fileArg), currentFolder.resolve(ClojureCodeGenerator.DEFAULT_FILENAME), topLevel);
-			break;
-		case PREPARE:
-			ClojureCodeGenerator.generateClojureProject(currentFolder);
-			break;
-		case BUILD:
-			ClojureCodeGenerator.generateClojureProject(currentFolder);
-			Compiler.clojureCompile(Paths.get(fileArg), currentFolder.resolve(ClojureCodeGenerator.DEFAULT_FILE_PROJECT_PATH), topLevel);
-			break;
-		case INTERPRET:
-			InputStream inStream = Files.newInputStream(Paths.get(fileArg));
-			Compiler.interpret(inStream, topLevel);
-			break;
-		case REPL:
-			Compiler.repl(System.in, System.out, topLevel, true);
-			break;
-		case DOCUMENTATION:
-			LangbaseDocumentationGenerator.spitDocStatic(
-					OperatorBank.operatorBanks.stream().map(o -> o.getClass()).collect(Collectors.toList()),
-					Paths.get(fileArg));
-			break;
-		case HELP:
-		default:
-			printHelp();
-			break;
-		}
-	}
 	
 	/**
 	 * Main entrypoint
@@ -90,20 +61,68 @@ public class Main {
 			Main.printHelp();
 			return;
 		}
-		if(args.length < 2) {
-			try {
-				Main.runMode(args[0], Paths.get(System.getProperty("user.dir")));
-				return;
-			} catch (Exception e) {
-				e.printStackTrace();
-			}
-		}
 		
 		try {
-			Main.runMode(args[0], Paths.get(System.getProperty("user.dir")), args[1]);
-		} catch (Exception e) {
-			e.printStackTrace();
+			switch(args[0].toLowerCase()) {
+			
+				case COMPILE:{
+						var fileArg = Path.of(args[1]);
+						var topLevel = TopLevelEnvironment.instantiate();
+						var fld = Path.of(System.getProperty("user.dir"));
+						Compiler.clojureCompile(fileArg, fld, topLevel);
+					}
+					break;
+				case PREPARE:{
+						var fld = Path.of(System.getProperty("user.dir"));
+						ClojureCodeGenerator.generateClojureProject(fld);
+					}
+					break;
+				case BUILD:{
+						var topLevel = TopLevelEnvironment.instantiate();
+						var fld = Path.of(System.getProperty("user.dir"));
+						var fileArg = Path.of(args[1]);
+						ClojureCodeGenerator.generateClojureProject(fld);
+						Compiler.clojureCompile(fileArg, fld.resolve(ClojureCodeGenerator.DEFAULT_FILE_PROJECT_PATH), topLevel);
+					}
+					break;
+				case INTERPRET:{
+						var inStream = Files.newInputStream(Path.of(args[0]));
+						var topLevel = TopLevelEnvironment.instantiate();
+						var l = new ArrayList<Expression>(args.length - 1);
+						for(int i = 1; i < args.length; i++) {
+							l.add(new LitString(args[i]));
+						}
+						topLevel.put(new Symbol(ClojureCoreSymbols.CONSOLE_ARGS_SYMBOL), new Tuple(l));
+						
+						Compiler.interpret(inStream, topLevel);
+					}
+					break;
+				case REPL:{
+						var topLevel = TopLevelEnvironment.instantiate();
+						var l = new ArrayList<Expression>(args.length - 1);
+						for(int i = 1; i < args.length; i++) {
+							l.add(new LitString(args[i]));
+						}
+						topLevel.put(new Symbol(ClojureCoreSymbols.CONSOLE_ARGS_SYMBOL), new Tuple(l));
+						Compiler.repl(System.in, System.out, topLevel, true);
+					}
+					break;
+				case DOCUMENTATION:{
+						LangbaseDocumentationGenerator.spitDocStatic(
+								OperatorBank.operatorBanks.stream().map(o -> o.getClass()).collect(Collectors.toList()),
+								Path.of(args[0]));
+					}
+					break;
+				case HELP:
+				default:
+					printHelp();
+					break;
+			}
 		}
+		catch(Exception e) {
+			throw new RuntimeException(e);
+		}
+		
 		return;
 	}
 }
